--- a/tools.html
+++ b/tools.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     Labour Market Information System</h1>
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2"><strong>Tools</strong></h3>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2"><strong>LMIS Tools</strong></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"><strong>a set of helping tools for searchers and researchers in the Labour Market including survey building and information mapping</strong></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="tools.html#features3-1j">More</a></div>
             </div>
@@ -129,13 +129,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background116.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
-                        </p>
+                            Using geographical map to assign situations such as required jobs and skill concenteration<br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             المزيد</a></div>
@@ -145,14 +144,13 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background217.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
                             Reports</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
-                        </p>
+                            Periodical report on the labour market information in Egypt and egyptians working abroad<br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             المزيد</a></div>
@@ -162,12 +160,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background318.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل<br>
+                            Services that could be offered to the LMIS echo system and users such as special reports or surveys<br><br>
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
@@ -178,12 +176,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background419.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background429.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
                             Studies</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Studies in the labour market, sectoral studies, HR studies and product related studies<br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             بحث</a></div>
@@ -208,8 +206,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Studies</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
-                        </p>
+                            Special studies in the LMIS echo system</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             المزيد</a></div>
@@ -224,8 +221,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Dual System</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
-                        </p>
+                            Technical studies located at actual working factories and industrial stablishment<br><br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             المزيد</a></div>
@@ -240,7 +236,7 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Innovation</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل<br>
+                            Help innovaotrs in setting their ideas to be a working product or service and be able to employ new job seekers<br>
                         </p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
@@ -257,7 +253,7 @@
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
                             Entrepenureship</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل</p>
+                           Help entrepenureship in the process of setting their business and ideas to fir into the labour market</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
                             بحث</a></div>
@@ -281,7 +277,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        تحليل الانظمة</h4>
+                        System info</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                     </p>
@@ -294,7 +290,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        تطبيقات المحمول</h4>
+                        Mobile Market</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                     </p>
@@ -306,7 +302,7 @@
                     <span class="mbri-responsive mbr-iconfont"></span>
                 </div>
                 <div class="card-box">
-                    <h4 class="card-title py-3 mbr-fonts-style display-5">التدريب وتكنولوجيا المعلومات</h4>
+                    <h4 class="card-title py-3 mbr-fonts-style display-5">ICT and LMIS</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                         دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                     </p>
@@ -319,7 +315,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">
-                        نظم معلومات التدريب</h4>
+                        Training information</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
                        دراسات متخصصة ودراسات قطاعية عن سوق العمل بالتركيز على المهن والعمال والاجور وغيرها من المعلومات المتعلقة بسوق العمل
                     </p>
