--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7cfzWhnIG1leukLHV+ahYtH+v8kkR8WruH2t8SjAJN9El4dfXansNV5erH6d7dq3Aarbu036h59DnULX925aPC/8y8puwSaeFiwMoKJPv2NDChaoJDvfvGKytlvzQ6lu">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mYFUIGhsUzTzgqdF/UnFq3m3wt7YspxyVB0TpPrg5sGZVMjP4OQb4Gj/HvHAbt4RcVKTJ8IcMGTz7VK2Rm1iut9rf7DX+NSoylmxAAlzFKyI6GFXSFsxwzj8z0AADQ2S">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
