--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
