--- a/tools.html
+++ b/tools.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1e">
 
     
 
@@ -129,14 +129,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background126.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background136.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>LMIS Map</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             Using geographical map to assign situations such as required jobs and skill concenteration<br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="#top" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="tools.html#map2-8m" class="btn btn-primary display-4">
                             المزيد</a></div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background227.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background237.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -160,7 +160,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background328.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background338.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>Surveies</strong></h4>
@@ -176,7 +176,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background429.jpg" alt="LMIS" title="LMIS">
+                        <img src="assets/images/background439.jpg" alt="LMIS" title="LMIS">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><strong>
@@ -190,6 +190,18 @@
         </div>
     </div>
 </section>
+
+<section class="map2 cid-rER4O3FQNP" id="map2-8m">
+
+    
+
+    <div class="container">
+        <div class="media-container-row">
+            <div class="col-md-8">
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/d/embed?mid=13C98W4fjuIU36wK4dIuQLAmSMXU&amp;hl=en" allowfullscreen=""></iframe></div>
+        </div>
+    </div>
+</div></section>
 
 <section class="features3 cid-rDpNDyjFKg" id="features3-6l">
 
