--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5lgA49So0w075omjgIt4+Nwdo6HyHZRi3gugKWyTh7swFpKhkliRnjGIlusJ98X1O1w0FsKArkitbQCWkDoKuCeWRm+iVluzFZK4lxgx9frgkzjgEuQThS98eK9v7z+p">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kKS3RdorUH3Z00V3rCJVRP5rQWMO/BltCVujKV56Ng7t8KKdcIfwTgl1D/pxCTU+BdvPlfgiLjZHA+VoGlVVvgChzDn03DuvGG/GCDbPLX4bkBa1InsZjlWPxfM0TUbJ">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
