--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5QDdM/7kLmOGuIGIOWneA7EXraRyjGbYTUK8Tvbnh6RHFF3uxTb40vURKeADoluql0Clzil3W50ZZMT7p9RVFZ5JdFF2AjtJ9+T76/NXSIX32ruvOUQuVO8m86RNCNVv">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="f+NZX/gKoUqnBvAzb5V83wkVBhoaHYgJYGnLDOC1ipDmVWX3dF5sICtRbJ+BLmalLygU5wIYO09f2Bje28qoMpeb6b/7qt/yPdDYyctLxaYlW5OnA2GYx+8WItUZYe2l">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
