--- a/SchoolToLaborReport.html
+++ b/SchoolToLaborReport.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
+<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6s">
 
     
 
