--- a/training.html
+++ b/training.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
