--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website for free</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Tm56X2PWNLAzz23+q4RVm41OyE0RkjmzK7hzCYR0P3hS0RL2NvSVAWRbs5Ja+/h8SCwWRCuJLg4VdYPY5WV5KbW07w/1yRaNHfNIP46xfuK2oHk9yftYT19CaGFwoJAl">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Q2jXIxg+A7/CCYqQufrJG3FTw5Dx5HO8Yt0zSEHW4hjEkcUfQKwxzLJ6CxeFMbHiYyHZwxMpqGhoOKtCisf7GauhUmKoIS/4O9OvWOhpXT5fE5th01tGtsi7DvDzKDgo">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
