--- a/career.html
+++ b/career.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-1a">
 
     
 
